--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
+    "build": "next build",
+    "export": "next export",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
